Enable preview in test.